// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable 1`] = `
Object {
  "images": Array [
    Object {
      "height": 100,
      "path": "foobar/cat-1000.100.jpg",
      "width": 100,
    },
  ],
  "src": "foobar/cat-1000.100.jpg",
  "srcSet": "foobar/cat-1000.100.jpg",
  "toString": [Function],
}
`;

exports[`doesn't emit file 1`] = `
Object {
  "height": 225,
  "images": Array [
    Object {
      "height": 225,
      "path": "foobar/cat-1000.250.jpg",
      "width": 250,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.250.jpg",
  "srcSet": "foobar/cat-1000.250.jpg 250w",
  "toString": [Function],
  "width": 250,
}
`;

exports[`multiple sizes 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/cat-1000.500.jpg",
      "width": 500,
    },
    Object {
      "height": 900,
      "path": "foobar/cat-1000.1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.500.jpg",
  "srcSet": "foobar/cat-1000.500.jpg 500w,foobar/cat-1000.1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output first resized image height & width 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/cat-1000.500.jpg",
      "width": 500,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.500.jpg",
  "srcSet": "foobar/cat-1000.500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output should be in outputPath dir 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/img/cat-1000.500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/img/cat-1000.750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/img/cat-1000.1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/img/cat-1000.500.jpg",
  "srcSet": "foobar/img/cat-1000.500.jpg 500w,foobar/img/cat-1000.750.jpg 750w,foobar/img/cat-1000.1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output should be relative to context 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/test/82647e9799aa0020dacb0ebeab4886fb-500x450.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/test/337b4d5469ae39ad6c7f2f92ac968020-750x675.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/test/32eef0247bb077de607da3d1f021d138-1000x900.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/test/82647e9799aa0020dacb0ebeab4886fb-500x450.jpg",
  "srcSet": "foobar/test/82647e9799aa0020dacb0ebeab4886fb-500x450.jpg 500w,foobar/test/337b4d5469ae39ad6c7f2f92ac968020-750x675.jpg 750w,foobar/test/32eef0247bb077de607da3d1f021d138-1000x900.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`override min and max with size 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/cat-1000.100.jpg",
      "width": 100,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.100.jpg",
  "srcSet": "foobar/cat-1000.100.jpg 100w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`override min and max with sizes 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/cat-1000.100.jpg",
      "width": 100,
    },
    Object {
      "height": 180,
      "path": "foobar/cat-1000.200.jpg",
      "width": 200,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.100.jpg",
  "srcSet": "foobar/cat-1000.100.jpg 100w,foobar/cat-1000.200.jpg 200w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`png 1`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/cat-transparent.500.png",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/cat-transparent.513.png",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-transparent.500.png",
  "srcSet": "foobar/cat-transparent.500.png 500w,foobar/cat-transparent.513.png 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`png to jpeg with background color 1`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/cat-transparent.500.jpg",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/cat-transparent.513.jpg",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-transparent.500.jpg",
  "srcSet": "foobar/cat-transparent.500.jpg 500w,foobar/cat-transparent.513.jpg 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`public path should replace global publicPath 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "public/cat-1000.500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "public/cat-1000.750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "public/cat-1000.1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "public/cat-1000.500.jpg",
  "srcSet": "public/cat-1000.500.jpg 500w,public/cat-1000.750.jpg 750w,public/cat-1000.1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`single size 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/cat-1000.500.jpg",
      "width": 500,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.500.jpg",
  "srcSet": "foobar/cat-1000.500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with min and max sizes 1`] = `
Object {
  "height": 540,
  "images": Array [
    Object {
      "height": 540,
      "path": "foobar/cat-1000.600.jpg",
      "width": 600,
    },
    Object {
      "height": 630,
      "path": "foobar/cat-1000.700.jpg",
      "width": 700,
    },
    Object {
      "height": 720,
      "path": "foobar/cat-1000.800.jpg",
      "width": 800,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.600.jpg",
  "srcSet": "foobar/cat-1000.600.jpg 600w,foobar/cat-1000.700.jpg 700w,foobar/cat-1000.800.jpg 800w",
  "toString": [Function],
  "width": 600,
}
`;

exports[`with min and max sizes options 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/cat-1000.100.jpg",
      "width": 100,
    },
    Object {
      "height": 150,
      "path": "foobar/cat-1000.167.jpg",
      "width": 167,
    },
    Object {
      "height": 211,
      "path": "foobar/cat-1000.234.jpg",
      "width": 234,
    },
    Object {
      "height": 270,
      "path": "foobar/cat-1000.300.jpg",
      "width": 300,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.100.jpg",
  "srcSet": "foobar/cat-1000.100.jpg 100w,foobar/cat-1000.167.jpg 167w,foobar/cat-1000.234.jpg 234w,foobar/cat-1000.300.jpg 300w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`with min and max sizes, and default steps 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/cat-1000.500.jpg",
      "width": 500,
    },
    Object {
      "height": 600,
      "path": "foobar/cat-1000.667.jpg",
      "width": 667,
    },
    Object {
      "height": 751,
      "path": "foobar/cat-1000.834.jpg",
      "width": 834,
    },
    Object {
      "height": 900,
      "path": "foobar/cat-1000.1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.500.jpg",
  "srcSet": "foobar/cat-1000.500.jpg 500w,foobar/cat-1000.667.jpg 667w,foobar/cat-1000.834.jpg 834w,foobar/cat-1000.1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with placeholder image 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/cat-1000.500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/cat-1000.750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/cat-1000.1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": "data:image/jpeg;base64,/9j/2wBDAAUDBAQEAwUEBAQFBQUGBwwIBwcHBw8LCwkMEQ8SEhEPERETFhwXExQaFRERGCEYGh0dHx8fExciJCIeJBweHx7/2wBDAQUFBQcGBw4ICA4eFBEUHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh7/wAARCAAkACgDASIAAhEBAxEB/8QAHAAAAgEFAQAAAAAAAAAAAAAAAAcGAQIDBAgF/8QALxAAAQMDAgUEAAUFAAAAAAAAAQIDBAAFEQYhBxIiMVEIE0FhFBYjgYIyUnGRsf/EABgBAAMBAQAAAAAAAAAAAAAAAAABAgME/8QAHBEAAwADAAMAAAAAAAAAAAAAAAECAxExBBIi/9oADAMBAAIRAxEAPwDyb36dW5FwaFouMO3wir9VXtLLiE+EpzhR+yRitJXpnkJurDiNVMuwgol1LsIhwj4AwrB+84rpN55iNGdkyHG2mGUlbjitkoSBkk+MUotTeoXRlskqYtcWZeSnYut4ZaJ+lK3P+cV0OZXTNNkXvnpmtElortt+kRJG+6o6VNn+IOR+xqLSPTnq6zyYk+0XW3XNxo5daVlg/wAScg7ecU1dCcedM6jvLNqm2+TZ35J5WXHHUuNFXwCQAU58kYpqszIL5HsS4zvMeUcjqFZPjY96TiKRU1UvaEnozg6+uU1N1a5HU2jq/AsK5goj+9fYj6HfzRTwKARj/tFKMGOFpI1y+TlyPdMSerOHmvrpZJf5s4jLfgR2FuLbb/TbXypJ68AAjbuc1zV+DListqS4gAHKOrI7ftXesu3Q5kN2LLYTIZkJKHWXOpCwfgg7GoBeuEsWRq+DqK1JgQFRlJDrAjAtuJT/AEkJTjCh/rYeKmo3wyVaENwz4aXq+LmyUqTAftr6W/bkgpVzcvN2+NiKbfCPhnL01rVi9OPxwyhtS5Q5+bnfIUAEjA6RzA5P3U2vtqvSwpCAgqldLkltrDnMBsSQcjxk9q2OFluv7GnPb1E6t6QmS57b60gKdbz0kgdvnFJR9B7PRMAUr3GQPkUVT2SnJB2orcgyoT1E5NWuZByCaKKT4BRlRUFFW9ZVbJAz3ooqkADccx7nvRRRQB//2Q==",
  "src": "foobar/cat-1000.500.jpg",
  "srcSet": "foobar/cat-1000.500.jpg 500w,foobar/cat-1000.750.jpg 750w,foobar/cat-1000.1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with size defined in webpack.config.js 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/cat-1000.500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/cat-1000.750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/cat-1000.1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/cat-1000.500.jpg",
  "srcSet": "foobar/cat-1000.500.jpg 500w,foobar/cat-1000.750.jpg 750w,foobar/cat-1000.1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;
